--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 #blue-text{
-    color: rgb(114, 187, 187);
+    color: rgb(110, 163, 59);
 }
 .text-style{
     font-family: 'Yeseva One', cursive;
@@ -19,7 +19,7 @@ body{
 #side-border{
     border-left: 7px solid;
     padding-left: 2%;
-    border-color: rgb(50, 221, 50);
+    border-color: rgb(230, 216, 33);
     border-image-slice: 1;
     border-width: 4px;
     height: 120px;
@@ -41,10 +41,10 @@ body{
 }
 .button-link{
     text-decoration: none;
-    background-image: linear-gradient(rgb(156, 156, 238), rgb(71, 218, 255));
+    background-image: linear-gradient(rgb(211, 165, 96), rgb(84, 180, 92));
     padding: 12px 45px;
     border-radius: 30px;
-    color: white;
+    color: rgb(229, 238, 106);
     font-weight: 900px;   
 }
 p{
@@ -73,7 +73,7 @@ p{
     margin-bottom: 2%;
     margin-right: 2%;
     border-radius: 15px;
-    background-color: rgb(247, 135, 115);
+    background-color: rgb(248, 161, 145);
 }
 h3{
     font-size: 22px;
@@ -96,7 +96,7 @@ h3{
     margin-bottom: 2%;
     margin-right: 2%;
     border-radius: 15px;
-    background-color: rgb(214, 247, 126);
+    background-color: rgb(223, 252, 143);
 }
 .second-itemtwo img{
     width: 50%;
@@ -113,7 +113,7 @@ h3{
     margin-bottom: 2%;
     margin-right: 2%;
     border-radius: 15px;
-    background-color: rgb(247, 126, 221);
+    background-color: rgb(250, 152, 229);
 }
 .second-itemthree img{
     width: 50%;
@@ -150,6 +150,31 @@ h3{
     background-size: 50% 50%;
     font-family: 'Poppins', sans-serif;
     display: flex;
-    margin-bottom: 120px;
+    margin-bottom: 150px;
     font-size: 22px;
+}
+.bold-footer{
+    font-family: 'Pattaya', sans-serif;
+    text-align: center;
+    font-size: 40px;
+    color: rgb(250, 248, 248);
+    padding-top: 30px;
+}
+.text-footer{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400px;
+    color: rgb(105, 100, 99);
+    padding-bottom: 40px;
+}
+.fifth-part{
+    background-color: black;
+    background-size: contain;
+    line-height: 5px;
+    margin: 0px;
+    
+    
+}
+.new-year{
+    color: cadetblue;
 }
