--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ h3{
     background-size: 50% 50%;
     font-family: 'Poppins', sans-serif;
     display: flex;
-    margin-bottom: 250px;
+    margin-bottom: 0px;
     font-size: 22px;
 }
 .bold-footer{
@@ -179,3 +179,21 @@ h3{
 .new-year{
     color: cadetblue;
 }
+.web-app{
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    font-weight: 700px;
+    text-align: left;
+    padding-left: 5%;
+}
+.web-apps{
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    margin-bottom: 120px;
+}
+.half-widthh img{
+    width: 80%;
+    height: 80%;
+    padding-left: 10%;
+    padding-top: 0%;
+    padding-bottom: 250px;
